# speech-dojo

./: .dockerignore  .gitignore  AGENTS.md  docker-compose.yaml
.codex/prompts/: speckit.implement.md
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
backend/: Cargo.toml
backend/fixtures/: topics.json
backend/migrations/: 001_init.sql
backend/src/: auth.rs  lib.rs  main.rs  state.rs
backend/src/api/: health.rs  mod.rs  realtime.rs  topics.rs
backend/src/api/sessions/: create.rs  delete.rs  detail.rs  finalize.rs  list.rs  mod.rs  upload.rs
backend/src/models/: audio_recording.rs  client_secret.rs  mod.rs  session.rs  topic.rs  transcript.rs
backend/src/services/: history.rs  mod.rs  sessions.rs  storage.rs  transcription.rs
backend/src/telemetry/: mod.rs
backend/tests/: realtime_session.rs  sessions_create.rs  sessions_get.rs
backend/tests/contract/: realtime_session.rs  sessions_create.rs
backend/tests/integration/: realtime_refresh.rs
frontend/: index.html  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/.next/: BUILD_ID  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/pages/: [[...slug]].tsx  _app.tsx
frontend/src/: App.tsx  config.ts  env.d.ts  index.css  style.css
frontend/tests/: build-smoke.spec.ts  history.spec.tsx  utils.tsx
specs/002-design-refresh/: plan.md  (+6 more)
(+115 files in other folders)
